--- a/index.css
+++ b/index.css
@@ -7,6 +7,18 @@
   margin: 5px;
 }
 
+body{
+  background: linear-gradient(to top, rgb(0,0,0,0.0) 50%,#234c6b) 10%, url(background.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
+  color:white;
+}
 
 
+#header{
+  font-weight: bold;
+  margin:10px;
+}
 
