--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #CourseForm{
-  width: 40%;
+  max-width: 500px;
 }
 
 #gradescale{
@@ -22,6 +22,9 @@ body{
   margin:10px;
 }
 .boxlength{
-  width: 200px;
+  width: 160px;
+}
+#boxlength{
+  width: 160px;
 }
 
